--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <p>It was a dark and stormy night.</p>
+        <p>It was a dark and stormy night. I had just left my girlfriend's house.</p>
     </body>
 </html>
