Gunnar added third line to story

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
-        <p>It was a dark and stormy night. I had just left my girlfriend's house.</p>
+        <p>It was a dark and stormy night.</p>
+	<p>I had just left my girlfriend's house.</p>
+	<p>And came upon a rather unsightly occourance.</p>
     </body>
 </html>
