added line 4 to story

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <body>
         <p>It was a dark and stormy night.</p>
 	<p>I had just left my girlfriend's house.</p>
-	<p>And came upon a rather unsightly occourance.</p>
+    <p>And came upon a rather unsightly occourance.</p>
+    <p>I thought I was seeing, things.</p>
     </body>
 </html>
