Added another line of the story

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <body>
         <p>It was a dark and stormy night.</p>
 	<p>I had just left my girlfriend's house.</p>
-    <p>And came upon a rather unsightly occourance.</p>
-    <p>I thought I was seeing, things.</p>
+    	<p>And came upon a rather unsightly occourance.</p>
+    	<p>I thought I was seeing things.</p>
+	<p>Might have been that fire crack I was toke'n on.</p>
     </body>
 </html>
