--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
+        <head><link rel="stylesheet" type="text/css" href="style.css"></head>
     <body>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <p>It was a dark and stormy night.</p>
 	<p>I had just left my girlfriend's house.</p>
     <p>And came upon a rather unsightly occourance.</p>
