Added another line of the story

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
         <head><link rel="stylesheet" type="text/css" href="style.css"></head>
     <body>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css"/>
         <p>It was a dark and stormy night.</p>
-	<p>I had just left my girlfriend's house.</p>
+	    <p>I had just left my girlfriend's house.</p>
     	<p>And came upon a rather unsightly occourance.</p>
     	<p>I thought I was seeing things.</p>
-	<p>Might have been that fire crack I was toke'n on.</p>
+	    <p>Might have been that fire crack I was toke'n on.</p>
     </body>
 </html>
