--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
-        <head><link rel="stylesheet" type="text/css" href="style.css"></head>
+        <head>
+            <link rel="stylesheet" type="text/css" href="style.css">
+            <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
+        </head>
     <body>
-        <link rel="stylesheet" type="text/css" href="style.css"/>
         <p>It was a dark and stormy night.</p>
 	    <p>I had just left my girlfriend's house.</p>
     	<p>And came upon a rather unsightly occourance.</p>
